Sorted the footer spacing issue.

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -33,6 +33,10 @@ body {
       margin-bottom: $spacing-vertical-xl;
     }
   }
+
+  &--condensed {
+    margin-bottom: 0;
+  }
 }
 
 .section--margin-b {
